--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -91,7 +91,7 @@
     <ion-item lines="full">
       <ion-icon name="download-outline" slot="start" color="success"></ion-icon>
       <ion-label>{{ 'SETTINGS.UPLOAD_MAPS' | translate }}</ion-label>
-      <ion-select [value]="" (ionChange)="onMapUploadChange($event.detail.value)" placeholder="{{ 'SETTINGS.SELECT_MAP' | translate }}" interface="popover" slot="end">
+      <ion-select [value]="" (ionChange)="onMapUploadChange($event.detail.value)" interface="popover" slot="end">
         @for (map of missingOfflineMaps; track map) {
           <ion-select-option [value]="map">{{ map }}</ion-select-option>
         }
@@ -100,8 +100,8 @@
 
     <ion-item lines="none">
       <ion-icon name="trash-outline" slot="start" color="danger"></ion-icon>
-      <ion-label>{{ 'SETTINGS.REMOVE_MAPS' | translate }}</ion-label>
-      <ion-select [value]="" (ionChange)="onMapRemoveChange($event.detail.value)" placeholder="{{ 'SETTINGS.SELECT_MAP' | translate }}" interface="popover" slot="end">
+      <ion-label>{{ 'SETTINGS.REMOVE_MAP' | translate }}</ion-label>
+      <ion-select [value]="" (ionChange)="onMapRemoveChange($event.detail.value)"  interface="popover" slot="end">
         @for (map of availableOfflineMaps; track map) {
           <ion-select-option [value]="map">{{ map }}</ion-select-option>
         }
