--- a/src/app/wpt-modal/wpt-modal.component.html
+++ b/src/app/wpt-modal/wpt-modal.component.html
@@ -66,7 +66,7 @@
       </ion-button>
       <br />
       <ion-button slot:end class="modal-cancel-button" (click)="dismissWithAction('cancel')">
-        {{ 'EDIT_MODAL.CANCEL' | translate }}
+        {{ 'EDIT.CANCEL' | translate }}
       </ion-button>
     </ion-buttons>
   } @else {
